<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/Go"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/go"
            android:enabled="false"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/remember"/>
    <Button
            android:text="@string/Alert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/alert"
            android:enabled="false"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/go"/>
    <TextView
            android:text="@string/Start"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/start" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/Foggy_Bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foggy_bottom" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/start" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/End"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/end" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/foggy_bottom" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/destination" android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/end" android:hint="@string/Destination"/>
    <CheckBox
            android:text="@string/Remember"
            android:layout_width="112dp"
            android:layout_height="66dp"
            android:id="@+id/remember"
            app:layout_constraintTop_toBottomOf="@+id/end" app:layout_constraintStart_toEndOf="@+id/destination"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.44"/>
</android.support.constraint.ConstraintLayout>